fixed issue with videolist covering or breaking search box

--- a/hololive-archive/public/assets/assets/css/main.css
+++ b/hololive-archive/public/assets/assets/css/main.css
@@ -3643,3 +3643,7 @@ input, select, textarea {
 	justify-content: center;
 	margin: auto;
 }
+
+#videoList{
+	padding-top: 5rem;
+}
